2004-10-27  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/space.h (l4_fpage_xspan): New function.

2004-10-23  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/ipc.h (l4_ipc, l4_lipc): New functions.

2004-10-07  Marcus Brinkmann  <marcus@gnu.org>

	* l4/ipc.h (_L4_clear_propagation): New function.
	* l4/gnu/ipc.h (l4_clear_propagation): New function.

2004-08-04  Peter Bruin  <pjbruin@dds.nl>

	* l4/schedule.h (_L4_set_priority): Use mask consisting of
	lower 8 bits instead of lower 16.
	(_L4_set_processor_no): Use mask consisting of lower 16 bits
	instead of lower 8.

	* powerpc/l4/bits/syscall.h (__L4_PPC_XCLOB): Move r18 and r19
	to ...
	(__L4_PPC_CLOB): ... here.
	(_L4_system_clock): Interchange registers used for TIME_LOW and
	TIME_HIGH.
	(_L4_unmap): Pass the first 10 message registers in physical
	registers to comply with L4 ABI change.
	(_L4_memory_control): Likewise.
	(_L4_ipc): Add r18 and r19 to list of clobbered registers.
	(_L4_lipc): Likewise.

	* ia32/l4/bits/syscall.h (_L4_processor_control): Remove parameter
	CONTROL to comply with L4 API change.
	* l4/compat/misc.h (L4_ProcessorControl): Likewise.
	* l4/gnu/misc.h: Likewise.

2004-10-06  Marcus Brinkmann  <marcus@gnu.org>
	
	* l4/compat/schedule.h (_L4_CLOCK_OP): Make CLOCK argument a
	reference.
	(_L4_CLOCK_OP) [__cplusplus]: Add another instance of the macro to
	define operator+(L4_Clock_t&, L4_Clock_t&) and
	operator-(L4_Clock_t&, L4_Clock_t&).
	(_L4_CLOCK_OP) [!__cplusplus]: Add another instance of the macro
	to define L4_ClockAdd and L4_ClockSub.
	* l4/thread.h (_L4_user_defined_handle_of, _L4_pager_of,
	__L4_STOP): Add the _L4_XCHG_REGS_DELIVER bit to CONTROL.
	* l4/syscall.h (_L4_XCHG_REGS_DELIVER): New macro.

	* l4/compat/space.h: Change all tests for _cplusplus to tests
	for __cplusplus.
	(L4_FlushFpage) [!__cplusplus]: Rename to ...
	(L4_FlushFpages) [!__cplusplus]: ... this.

	* l4/gnu/space.h (L4_FPAGE_READ_WRITE_ONLY): Define macro.
	* l4/space.h (_L4_read_write_only): Define macro.